# this2that

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/commands/: tasking.md
cli/: __init__.py  agentcfg.py  agentcfg_mcp.py
docs/: architecture.md  context7-query-templates.md  prd.md
docs/roles/: mapping-renderer-engineer.md  parser-ontology-engineer.md  platform-engineer.md  quality-release-engineer.md  registry-detection-engineer.md
docs/tasks/: epics.md  task_roles.md  tasks.md
docs/tasks/items/: T001-identify-initial-supported-agents.md  T002-define-supported-config-artifacts-per-agent.md  T003-define-migration-modes.md  T004-define-non-goals.md  T005-define-cli-syntax.md  T006-support-stdin-and-stdout-streaming.md  T007-support-workspace-auto-detection.md  T008-add-dry-run-mode.md  (+87 more)
src/: __init__.py  doc_extract.py  doc_fetch.py  doc_model.py
src/mcp/: server.py
src/parser/: __init__.py  markdown_ast.py
src/registry/: __init__.py  detection.py  models.py  plugins.py  validation.py
src/renderer/: __init__.py  streaming.py
tests/cli/: test_agentcfg_stdio.py
tests/doc_extract/: test_extract_inputs.py
tests/doc_fetch/: test_orchestration.py
tests/doc_model/: test_normalize_doc_model.py
tests/mcp/: test_schema_validation.py  test_server_prompts.py  test_server_resources.py  test_server_stdio.py  test_server_tools.py
tests/parser/: test_markdown_ast.py
tests/registry/: test_detection.py  test_models.py  test_plugins.py  test_validation.py
tests/renderer/: test_chunked_stdout_writer.py  test_stream_markdown_sections.py
