[project]
name = "agentcfg"
version = "0.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
